@@ -1,0 +1,59 @@
+Build.PL
+Changes
+LICENSE
+MANIFEST
+META.json
+META.yml
+README
+SIGNATURE
+css/colour-green.css
+css/presentation.css
+images/icons.png
+javascript/15html-formwidgets.js
+javascript/50calendar.js
+javascript/51calendar-setup.js
+javascript/60behaviour.js
+javascript/lang/calendar-de.js
+javascript/lang/calendar-en.js
+javascript/lang/calendar-es.js
+javascript/lang/calendar-nl.js
+javascript/lang/calendar-pl.js
+javascript/lang/calendar-ru.js
+lib/HTML/FormWidgets.pm
+lib/HTML/FormWidgets/Anchor.pm
+lib/HTML/FormWidgets/Async.pm
+lib/HTML/FormWidgets/Button.pm
+lib/HTML/FormWidgets/Checkbox.pm
+lib/HTML/FormWidgets/Chooser.pm
+lib/HTML/FormWidgets/Cloud.pm
+lib/HTML/FormWidgets/Date.pm
+lib/HTML/FormWidgets/File.pm
+lib/HTML/FormWidgets/Freelist.pm
+lib/HTML/FormWidgets/GroupMembership.pm
+lib/HTML/FormWidgets/Hidden.pm
+lib/HTML/FormWidgets/Image.pm
+lib/HTML/FormWidgets/Label.pm
+lib/HTML/FormWidgets/List.pm
+lib/HTML/FormWidgets/Menu.pm
+lib/HTML/FormWidgets/Note.pm
+lib/HTML/FormWidgets/POD.pm
+lib/HTML/FormWidgets/Paragraphs.pm
+lib/HTML/FormWidgets/Password.pm
+lib/HTML/FormWidgets/PopupMenu.pm
+lib/HTML/FormWidgets/RadioGroup.pm
+lib/HTML/FormWidgets/Rule.pm
+lib/HTML/FormWidgets/ScrollPin.pm
+lib/HTML/FormWidgets/ScrollingList.pm
+lib/HTML/FormWidgets/SidebarPanel.pm
+lib/HTML/FormWidgets/Slider.pm
+lib/HTML/FormWidgets/TabSwapper.pm
+lib/HTML/FormWidgets/Table.pm
+lib/HTML/FormWidgets/TableRow.pm
+lib/HTML/FormWidgets/Template.pm
+lib/HTML/FormWidgets/Textarea.pm
+lib/HTML/FormWidgets/Textfield.pm
+lib/HTML/FormWidgets/Tree.pm
+t/01always_pass.t
+t/02pod.t
+t/07podspelling.t
+t/10base.t
